--- a/nfs-server/templates/exports.j2
+++ b/nfs-server/templates/exports.j2
@@ -1,5 +1,5 @@
 {% for nfs_share in nfs_shares %}
-{{ nfs_share.share }} {{ nfs_share.clients }}({{ nfs_share.perms }},{{ nfs_share.sync }},{{ nfs_share.squash }})
+{{ nfs_share.share }} {{ nfs_share.hosts }}({{ nfs_share.perms }},{{ nfs_share.other }})
 
 {% endfor %}
 
